<resources>
    <string name="app_name">New Normal Guide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="info">Info</string>
    <string name="guide">Guide</string>
    <string name="hotline">Hotline</string>
    <string name="sembuh">Negatif</string>
    <string name="positif">Positif</string>
    <string name="meninggal">Meninggal</string>
    <string name="zero">0</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="deaths">Deaths</string>
    <string name="one_week">1 Week</string>
    <string name="one_month">1 Month</string>
    <string name="max">Max</string>
    <string name="total_kasus">Total Kasus</string>
    <string name="covid_19">Covid-19 dan New Normal</string>
    <string name="covid19_go_id">covid19.go.id</string>
    <string name="kementerian_kesehatan">Kementerian Kesehatan</string>
    <string name="daftar_rumah_sakit_rujukan">Daftar Rumah Sakit Rujukan</string>
    <string name="new_normal_guide_adalah">New Normal Guide adalah aplikasi pemandu masyarakat untuk memulai aktivitas sehari-hari pada masa new normal ini. Aplikasi ini memiliki fitur-fitur yang berfungsi untuk melengkapi dan mempermudah kehidupan masyarakat saat new normal.</string>
    <string name="link_api">Link API</string>
    <string name="covidtracking_com">covidtracking.com</string>
    <string name="referensi">Referensi</string>
    <string name="designed_and_developed_by">Designed and Developed by</string>
    <string name="rayhan_athaya_noor_hidayat">Rayhan Athaya Noor Hidayat</string>
    <string name="ditinjau_oleh">Ditinjau oleh:</string>
</resources>