<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".ui.main.MainFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="4dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_top">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/sembuh"
                    android:theme="@style/TextHeading" />

                <TextView
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/positif"
                    android:theme="@style/TextHeading" />

                <TextView
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/meninggal"
                    android:theme="@style/TextHeading" />
            </TableRow>

            <TableRow>

                <com.robinhood.ticker.TickerView
                    android:id="@+id/ticker_sembuh"
                    android:layout_width="0dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/zero"
                    android:textColor="@color/colorNegative"
                    android:textSize="25sp" />

                <com.robinhood.ticker.TickerView
                    android:id="@+id/ticker_positif"
                    android:layout_width="0dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/zero"
                    android:textColor="@color/colorPositive"
                    android:textSize="25sp" />

                <com.robinhood.ticker.TickerView
                    android:id="@+id/ticker_death"
                    android:layout_width="0dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/zero"
                    android:textColor="@color/colorDeath"
                    android:textSize="25sp" />
            </TableRow>
        </TableLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>